tests/fixtures/guardrails/valid/app/routes/member-service-import.ts
const targets = {
  service: "~/app/services/products.server",
};

export async function loader() {
  return import(targets.service);
}
