tests/fixtures/guardrails/invalid/route-inline-business-logic/app/routes/products.ts
export async function action() {
  const normalizedHandle = " hat ".trim();
  return normalizedHandle.toUpperCase();
}
